# vscode-craft-ls

./: .vscodeignore  LICENSE  README.md  SECURITY.md  flake.nix  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yaml  release.yaml
bundled/tool/: lsp_server.py
src/common/: server.ts
